<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">南方院后云服务</string>
    <string name="API_TOKEN">29EE72A252B6481598AF079F61B8F915866582</string>
    <string name="undefind">undefind</string>
    <string name="title_tongbu">同步数据</string>
    <string name="android_login_username">帐号</string>
    <string name="android_login_reg">注册</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="android_login_reg">注册</string>
    <string name="android_login_password">密码</string>
    <string name="android_login_name">登录</string>
    <string name="android_offlinelogin_name">离线登录</string>
    <string name="databasename">nfyhcloud.db</string>
    <string name="login_forgetpassword"><a href="www.baidu.com">忘记密码？</a></string>
    <string name="url_webservice">http://nfyh.smu.edu.cn/WebService/Api.asmx</string>
    <string name="url_chat">http://nfyh.smu.edu.cn/User/healthControl/HealthMonitor.aspx?action=m</string>
    <string name="url_webservice_namespace">http://nfyxHospital.org/</string>
    <string name="upload_photo_url">http://nfyh.smu.edu.cn/Upload.aspx</string>
    <string name="url_health_assess">http://nfyh.smu.edu.cn/RMBase/SysHealthAM/HealthReport.aspx</string>
    <string name="url_myddc">http://nfyh.smu.edu.cn/RMBase/SysSurvey/SmsSurveyRecord.aspx</string>
    <string name="url_yjfk">http://nfyh.smu.edu.cn/RMBase/SysFeedback/Feedback.aspx</string>
    <string name="url_bqpg">http://nfyh.smu.edu.cn/RMBase/SysAssess/MyAssess_List.aspx?uid=@uid</string>
    <string name="soap_login">Login</string>
    <string name="tab_title_tzcl">体征测量</string>
    <string name="tab_title_yhgl">院后管理</string>
    <string name="tab_title_yhda">院后档案</string>
    <string name="tab_title_chat">医患互动</string>
    <string name="tab_title_grzx">个人设置</string>
    <string name="tab_title_jjhj">移动呼救</string>
    <string name="menu_myddc">满意度调查</string>
    <string name="menu_cyxj">出院提醒</string>
    <string name="menu_sf">随访</string>
    <string name="menu_yhhd">医患互动</string>
    <string name="menu_yhzp">院后照片</string>
    <string name="menu_ct_dicom">CT、DICOME</string>
    <string name="menu_yzxx">院中信息</string>
    <string name="tz_gaoya">高压</string>
    <string name="tz_diya">低压</string>
    <string name="tz_maibo">脉搏</string>
    <string name="tz_xueyang">血氧</string>
    <string name="tz_tiwen">体温</string>
    <string name="tz_tizhong">体重</string>
    <string name="tz_xuetang">血糖</string>
    <string name="tz_until_xy">mmHg</string>
    <string name="tz_until_maibo">次/分</string>
    <string name="tz_until_xueyang">%</string>
    <string name="tz_until_tiwen">℃</string>
    <string name="tz_until_tizhong">kg</string>
    <string name="tz_until_xuetang">mmol/L</string>
    <string name="try_network">一键呼救</string>
    <string name="exit">退出</string>
    <string name="actionbar_title_tztb">历史记录</string>
    <string name="switch_dev">设备</string>
    <string name="access_result">测量/结果</string>
    <string name="startdate">开始时间</string>
    <string name="enddate">结束时间</string>
    <string name="viewchat">查看图表</string>
    <string name="take_photo">拍照</string>
    <string name="category">添加分类</string>
    <string name="select_photo">照片</string>
    <string name="upload_photo">上传照片</string>
    <string name="upload_photo_add">添加照片</string>
    <string name="title">标题</string>
    <string name="saysomethink">说的什么吧</string>
    <string name="album">相册</string>
    <string name="sos_locate">正在定位,一下下就好</string>
    <string name="sos_tips">轻敲上面按钮，发出呼救</string>
    <string name="menu_jkpg">健康评估</string>
    <string name="usersetting">用户设置</string>
    <string name="setting_floatsos">急救悬浮框</string>
    <string name="setting_checkversion">检查新版本</string>
    <string name="title_remind">出院小结提醒</string>
    <string name="widget_sos">一键呼救</string>
    <string name="sos_contarct">急救呼救拨打电话联系人</string>
    <string name="sos_event_name">急救时发生的常用事件</string>
    <string name="sos_add">添加联系人和事件</string>
    <string name="downingapk">正在下载新版本..</string>
    <string name="title_activity_user_files">UserFilesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_setting_device">监测设备切换</string>
    <string name="activity_alarm_add">添加闹钟</string>
    <string name="activity_setting_fall">跌倒监测</string>
    <string name="activity_alarm">出院提醒</string>
    <string name="activity_message">消息提醒</string>
    <string name="activity_photo_select">选择图片</string>
    <string name="activity_photo_upload">图片上传</string>
    <string name="activity_setting_desktop">桌面急救悬浮框设置</string>
    <string name="activity_setting_record">急救语音设置</string>
    <string name="title_activity_user_seting">UserSetingActivity</string>
    <string name="title_activity_tumble_setting">TumbleSettingActivity</string>
    <string name="title_activity_first_aid_setting">FirstAidSettingActivity</string>
    <string name="title_activity_phone_num_setting">PhoneNumSettingActivity</string>
    <string name="title_activity_happen_event_setting">HappenEventSettingActivity</string>
    <string name="title_activity_device_change">DeviceChangeActivity</string>
    <string name="title_activity_alarm_excutetime">AlarmExcutetimeActivity</string>
    <string name="photo_title_tips">请输入照片分类</string>
    <string name="photo_title_tips_hit">格式：南方医院急诊科第一次</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="add">删除</string>
    <string name="edit">编辑</string>
    <string name="loading_data">正在接收蓝牙数据..</string>
    <string name="uploading_Data">正在同步数据，请稍候..</string>
    <string name="please_login">请登录</string>
    <string name="myddc">满意度调查</string>
    <string name="tzgy">体征干预</string>
    <string name="cyxj">出院提醒</string>
    <string name="sf">随访</string>
    <string name="yhhd">医患互动</string>
    <string name="grzx">个人中心</string>
    <string name="grsz">个性设置</string>
    <string name="bqpg">病情评估</string>
    <string name="yjfk">意见反馈</string>
    <string name="canshuxuanzhe">参数选择</string>
    <string name="wu">无</string>
    <string name="chart">最近记录</string>
    <string name="yhzp">院后照片</string>
    <string name="yzxx">院中信息</string>
    <string name="jkpg">健康评估</string>
    <string name="xxts">消息提醒</string>
    <string name="xitongfenxi">系统分析</string>
    <string name="version_code">版本号</string>
    <string name="please_connect">请连接迈瑞设备</string>
    <string name="rescan">重新扫描</string>
    <string name="disconnet_bluetooth">断开连接</string>
    <string name="tips_connect_bluetooth">没有找到迈瑞监测设备切换设备，请点击右上角</string>
    <string name="tips_connect_success">已连接迈瑞监护设备点击设备上的记忆按钮上传数据</string>
    <string name="tips_connecting_bluetooth">正在连接设备..</string>
    <string name="tips_receive_data">正在接收数据..</string>
    <string name="alarm_content_hint">提醒内容，如：每天一杯水</string>
    <string name="alarm_title_hint">提醒标题，如：喝水</string>
    <string name="alarm_title_content">提醒内容</string>
    <string name="alarm_title_date">时间/频次</string>
    <string name="alarm_end_date">结束时间</string>
    <string name="alarm_start_date">开始时间</string>
    <string name="alarm_start_repeat">开启每天提醒</string>
    <string name="alarm_repeat_count">重复次数</string>
    <string name="alarm_repeat_span">重复提醒间隔</string>
    <string name="setting_device">设备</string>
    <string name="setting_jiance_device">当前监测设备</string>
    <string name="setting_fall">开启跌倒监测</string>
    <string name="setting_autodevice">设备连接提示</string>
    <string name="setting_desktop">开启桌面急救</string>
    <string name="setting_app">软件</string>
    <string name="setting_appversion">软件版本</string>
    <string name="setting_appinfo">软件信息</string>
    <string name="setting_comm">通用</string>
    <string name="setting_yuanhou">开启院后提醒</string>
    <string name="setting_tips">个性告警</string>
    <string name="setting_autoupload">自动上传</string>
    <string name="setting_pullmsg">开启消息推送</string>
    <string name="setting_desktop_title">桌面悬浮框</string>
    <string name="setting_phone">紧急呼救联系人号码设置</string>
    <string name="setting_fall_phone">跌倒仪插入的手机号码</string>
    <string name="setting_event">紧急事件预定义设置</string>
    <string name="setting_event_record">紧急语音提示</string>
    <string name="setting_shuoming">说明</string>
    <string name="empty">这里空空如也..</string>
    <string name="setting_add">添加</string>
    <string name="setting_fall_bind">绑定</string>
    <string name="company">广州南方宜信信息科技有限公司</string>
    <string name="setting_fall_info"><p>点击绑定后，系统会发一条信息到跌倒设备</p><p>如果安全软件提示[发送短信]请点击允许。</p><p>等待1分钟您将收到一条绑定成功的信息。</p><p>    如果开启第三方通讯录软件（360安全通讯录、QQ通讯录等）该功能将失效。</p></string>
    <string name="rui_cancle">取消</string>
    <string name="rui_sure">确定</string>
    <string name="xr_notname">未命名</string>
    <string name="xr_login">登录</string>
    <string name="xr_reg">注册</string>
    <string name="xr_exit">退出</string>
    <string name="xr_logout">注销</string>
    <string name="xr_loadding">正在加载...</string>
    <string name="soap_url">http://nfyh.smu.edu.cn/WebService/Api.asmx</string>
    <string name="soap_namespace">http://nfyxHospital.org/</string>
    <string name="soap_method_category">GetCategories</string>
    <string name="soap_method_upload_sign">UploadData</string>
    <string name="soap_method_photo_list">GetPhotos</string>
    <string name="soap_method_version_update">VersionUpdate</string>
    <string name="url_method_photo_list">http://nfyh.smu.edu.cn/WebService/Data.ashx?action=getImage</string>
    <string name="url_method_photo_upload">http://nfyh.smu.edu.cn/WebService/Data.ashx?action=uploadImage</string>
    <string name="soap_method_category_add">addCategory</string>
    <string name="soap_method_category_update">updateCategory</string>
    <string name="soap_method_myd">GetSmsPatList</string>
    <string name="soap_method_login">Login</string>
    <string name="soap_method_login_qq">LoginByQQ</string>
    <string name="soap_method_login_bind">BindQQAuth</string>
    <string name="soap_method_message">GetMessage</string>

    <!-- FeatureListItemView 要显示的模式 -->
    <string name="titleModel">titleModel</string>
    <string name="textModel">textModel</string>
    <string name="deleteModel">deleteModel</string>
    <string name="switchModel">switchModel</string>
    <string name="gotoModel">gotoModel</string>
    <string name="switchAndGotoModel">switchAndGotoModel</string>
    <string name="textAndGotoModel">textAndGotoModel</string>

    <!-- 体征警告颜色定义，请按照级别从低到高排列 -->
    <string-array name="signLevelColor">
        <item>#cfd0d0</item>
        <item>#aeaeae</item>
        <item>#aeaeae</item>
        <item>#01e9db</item>
        <item>#0db4eb</item>
        <item>#13b845</item>
        <item>#17a200</item>
        <item>#8ad100</item>
        <item>#f68b00</item>
        <item>#d8005c</item>
        <item>#b200d8</item>
    </string-array>

</resources>